Corrected classes in CSS/HTML for card size/spacing, added more animations and removed the wow.sync function

--- a/public/src/app/app.component.css
+++ b/public/src/app/app.component.css
@@ -207,12 +207,6 @@ h1 {
 .myRow {
     height: 25rem;
 }
-.invisible {
-    opacity: 0;
-}
-.visible {
-    opacity: 1;
-}
 .myMap {
     width: 100%;
     height: 100%;
@@ -220,11 +214,11 @@ h1 {
 .contactSpace {
     margin: 1rem;
 }
-.size {
+.cardFillTop {
     height: 12.5rem;
 }
-.color {
-    background-color: black;
+.cardFillBottom {
+    height: 12.5rem;
 }
 .wow {
     visibility: hidden;
